app/assets/stylesheets/application.scss
/* ... */
.search-review-flex {
  display: flex;
  justify-content: space-between;
  flex-direction: column;
  flex-flow: column wrap;
  flex-wrap: wrap;
}

.search-review-box1 {
  order: 1;
}

.search-review-box2 {
  order: 2;
  margin-top: 10px;
}

.search-review-box3 {
  order: 3;
  margin-top: -2px;
  page-break-after: always;
}

.search-review-box5 {
  flex: 0 0 50%;
  order: 5;
  margin-top: -10px;
  // margin-left: 0 auto;
  align-self: flex-end;
}

.search-review-text {
  margin-top: -5px;
}

@media only screen and (max-width: 940px) {
  .search-product-card {
    width: 90%;
  }
  .search-noresult-card {
    width: 90%;
  }
  .search-review-card {
    width: 90%;
  }
}

@media only screen and (max-width: 620px) {
  .search-product-card {
    width: 100%;
  }
  .search-noresult-card {
    width: 100%;
  }
  .search-review-card {
    width: 100%;
    height: 160px;
  }
  .search-product-text {
    margin-top: -5px;
    flex-direction: column;

    & > div {
      text-align: left;
    }
  }

  .search-product-flex1 {
    margin-top: 10px;
  }
  .search-adjust-stars {
    margin-top: -10px;
  }
  .search-review-box3 {
    order: 3;
    margin-top: -2px;
    page-break-after: avoid;
  }
  .search-review-box5 {
    margin-top: -80px;
    // align-self: normal;
    // align-self: center;
  }

}

// Footer & Footer Link Page Styles

.footer {
  margin-top: 10px;
  height: 100px;
  min-width: 60vh;
  max-width: 100%;
  background-color: #f8f9fa;
  display: flex;
  justify-content: center;
  flex-wrap: wrap;


  & > h4 {
    margin-left: 20px;
    margin-right: 20px;
  }

  & > p {
    align-self: flex-end;
    word-wrap: wrap;
    background-color: #f8f9fa;
    padding-bottom: 10px;
  }  
}

@media only screen and (max-width: 460px) {
  .footer {
    min-width: 100%;
    max-width: 100%;
    width: 100%;
    word-wrap: wrap;
    text-align: center;
  }
}


.footer-flex-end {
  page-break-after: always;
} 

.footer-legal {
  margin-top: -20px;
  text-align: center;
  font-size: .8rem;
}

.footer-spacer {
  margin-top: 15px;
}

// Static Footer Pages

.static-page-flex {
  display: flex;
  flex-direction: column;
  align-items: center;
  // align-items: baseline;

  & > .static-flex1 {
    order: 1;
    margin-top: 10px;
    // justify-content: center;

  }

  & > .static-flex2 {
    order: 2;
    margin-top: 40px;
  }
}

// Our Community

.community-flex-container {
  display: flex;
  flex-direction: column;
  max-height: 2100px;
  flex-flow: column wrap;
}

.community-profile-card {
  flex: 50%;
  padding: 10px;
  width: 45%;
  height: 170px;
  border: 1px;
  border-radius: 5px;
  border: 1.5px solid #CBCBCB;
  border-top: 3px solid #e1d5ba;
  text-align: left;
  margin: 5px;
  align-self: center;
  white-space: nowrap;
  overflow: scroll;
}

@media (max-width: 900px) {
  .community-profile-card {
    // flex: 100%;
    width: 80%;
  }

  .community-flex-container {
    max-height: max-content;
  }
}

@media (max-width: 600px) {
  .community-profile-card {
    // flex: 100%;
    width: 90%;
  }
}


.community-profile-flex {
  display: flex;
  align-items: center;
  // justify-content: space-between;
}

.community-profile-box1 {
  // flex: 0 0 50%;
  margin-right: 0 auto;
  order: 1;
  page-break-after: always;
}

.community-profile-box2 {
  margin-left: 40px;
  order: 2;
  display: flex;
  justify-content: space-between;
  flex-direction: column;
  width: auto;
  // flex-flow: column wrap;
  // flex-wrap: wrap;
}

@media (max-width: 520px) {
  .community-profile-card {
    // flex: 100%;
    width: 100%;
  }
  .community-profile-box2 {
    margin-left: 10px;
  }
}

.community-column-box1 {
  order: 1;
  // margin-top: -50px;
}

.community-column-box2 {
  order: 2;
  // margin-top: 10px;
  & > .community-align-stars {
    display: inline-block;
  }
}

.community-column-box3 {
  order: 3;
  // margin-top: 10px;
}

.community-column-box4 {
  order: 4;
  // margin-top: 10px;
}

.star-align {
  position: relative;
  top: 3px;
}

// Sort By Button for lists

.sort-flex-wrapper {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;

  & h2 {
    grid-column: 2;
    justify-self: center;
  }

  & > .sort-button {
    grid-column: 3;
    justify-self: end;
    margin-top: 5px;
    width: 80px;
    height: 30px;
    margin-right: 30%;
  }
}

@media only screen and (max-width: 460px) {
  .sort-flex-wrapper {
    grid-template-columns: 1fr;
    grid-template-rows: 1fr 1fr;

    & h2 {
      grid-column: 1;
      grid-row: 1;
      justify-self: center;
      // width: 200px;
    }

    & > .sort-button {
      grid-column: 1;
      grid-row: 2;
      justify-self: center;
      margin-right: 0px;
    }
  }
}

.sort-our-community-spacer {
  margin-top: -17px;
}

html,body{
  overflow-x: visible;
}

